--- a/feedstock/catalog.yaml
+++ b/feedstock/catalog.yaml
@@ -13,6 +13,6 @@ tags:
 stores:
   - id: "lcspp-avhrr-1982-2000"
     name: "LCSPP-AVHRR Long-term Continuous SIF-informed Photosynthesis Proxy v3.2 (1982–2000)"
-    url: "https://zenodo.org/records/14568024/files/LCSPP-AVHRR_v3.2_1982-2000.tar.gz"
+    url: "https://zenodo.org/records/14568024"
     source: "SIF-informed photosynthesis proxy reconstructed from AVHRR surface reflectance (bands corrected using MODIS overlap, 1982–2000), emulating OCO-2 SIF"
     source_url: "https://doi.org/10.5281/zenodo.14568024"
