--- a/feedstock/catalog.yaml
+++ b/feedstock/catalog.yaml
@@ -11,7 +11,7 @@ ags:
 
 stores:
   - id: "lcspp-avhrr-1982-2000"
-    name: "LCSPP-AVHRR Long-term Continuous SIF-informed Photosynthesis Proxy v3.2 (1982–2000)"
+    name: LCSPP-AVHRR Long-term Continuous SIF-informed Photosynthesis Proxy v3.2 (1982–2000)
     url: "gs://leap-persistent/data-library/GLAB-CSIF/GLAB-CSIF.zarr"
     source: "SIF-informed photosynthesis proxy reconstructed from AVHRR surface reflectance (bands corrected using MODIS overlap, 1982–2000), emulating OCO-2 SIF."
     source_url: "https://doi.org/10.5281/zenodo.14568024"
