--- a/feedstock/meta.yaml
+++ b/feedstock/meta.yaml
@@ -2,14 +2,10 @@ title: "LCSPP-AVHRR Photosynthesis Proxy"
 description: >
   The Long-term Continuous SIF-informed Photosynthesis Proxy from AVHRR surface reflectance (LCSPP-AVHRR) provides a globally consistent, biweekly dataset of photosynthetic activity spanning 1982 to 2000 at 0.05° spatial resolution. Version 3.2 of the dataset is constructed by calibrating AVHRR surface reflectance bands against MODIS during their overlapping period (2001–2023), followed by training a neural network to emulate satellite-derived SIF from OCO-2. The LCSPP-AVHRR dataset captures vegetation dynamics with higher fidelity than traditional vegetation indices (e.g., NDVI, kNDVI, NIRv) and is suitable for long-term GPP proxy estimation. All data are provided in NetCDF format with two files per month to represent biweekly intervals.
 
-recipes:
-  - id: "LCSPP-AVHRR"
-    object: "recipe:LCSPP-AVHRR"
-
 provenance:
   providers:
     - name: "Columbia University"
-      description: "Primary research institution developing the neural network and coordinating data integration"
+      description: "Primary research institution"
       roles:
         - producer
         - research institution
