--- a/feedstock/meta.yaml
+++ b/feedstock/meta.yaml
@@ -19,8 +19,8 @@ provenance:
       description: "Permanent archive hosting the LCSPP-AVHRR dataset and associated resources"
       roles:
         - host
-      url: https://zenodo.org/doi/10.5281/zenodo.14568024
 
+  license: "Creative Commons Attribution 4.0 International (CC BY 4.0)"
 
 
 maintainers:
